Fix updateList function

--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -33,7 +33,7 @@
   <hr />
 
   <div class="table-height">
-    <table mat-table [dataSource]="announcementList" *ngIf="!isLoading">
+    <table mat-table [dataSource]="displayAnnouncementList" *ngIf="!isLoading">
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
         <td mat-cell *matCellDef="let element" class="comments-field">{{ element.title }}</td>
