--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -26,7 +26,7 @@
         Experied
       </button>
       <button mat-raised-button class="action-btn" (click)="createAnnouncement()">
-        Add announcement
+        Add Announcement
       </button>
     </div>
   </div>
