--- a/apps/frontend/src/app/pages/announcements/announcements.component.scss
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.scss
@@ -9,11 +9,31 @@
 
   &.Expired {
     background: var(--grey);
-
   }
 
   &.Future {
     background: var(--green);
-
   }
+}
+
+.setBackground {
+  background: var(--lightblue);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  height: 40px;
+}
+
+.large {
+  height: 100px;
+}
+
+::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix {
+  padding: 0;
+}
+
+::ng-deep .mat-form-field-label {
+  margin-left: 10px;
+}
+
+::ng-deep .mat-form-field-focus {
 }
