--- a/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
@@ -1,56 +1,50 @@
 <form [formGroup]="updateAnnouncementForm">
   <div class="flex-container">
-  <div class="flex-child">
+    <div class="flex-child">
       <div class="center">
-      <div class="drag-and-drop-box">
-        <p>Drag and drop your file(s) here or</p>
-        <p><a href="">Browse here</a></p>
+        <div class="drag-and-drop-box">
+          <p>Drag and drop your file(s) here or</p>
+          <p><a href="">Browse here</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="flex-child">
+      <h1>Update Announcement</h1>
+      <hr />
+
+      <mat-form-field class="full-width" autocomplete="off">
+        <mat-label>Title</mat-label>
+        <input #title type="text" matInput class="setBackground" />
+      </mat-form-field>
+
+      <mat-form-field class="full-width">
+        <mat-label>Description</mat-label>
+        <input #description type="text" matInput class="large setBackground topText" />
+      </mat-form-field>
+
+      <div class="dialog-row">
+        <mat-form-field autocomplete="off">
+          <mat-label>ShowFrom</mat-label>
+          <input onclick="this.showPicker()" matInput type="datetime-local" class="setBackground" />
+        </mat-form-field>
+
+        <mat-form-field autocomplete="off">
+          <mat-label>ShowTo</mat-label>
+          <input onclick="this.showPicker()" matInput type="datetime-local" class="setBackground" />
+        </mat-form-field>
       </div>
 
+      <div class="dialog-row">
+        <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">
+          Cancel
+        </button>
+        <button class="action-btn" mat-raised-button type="submit">
+          <div *ngIf="!isLoading">Update</div>
+          <div *ngIf="isLoading" class="btn-spinner">
+            <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+          </div>
+        </button>
+      </div>
     </div>
   </div>
-  <div class="flex-child">
-  <h1>Add announcement</h1>
-  <hr />
-
-  
-    <mat-form-field class="full-width" autocomplete="off">
-      <mat-label>Title</mat-label>
-      <input #title type="text" matInput placeholder="Updated info" />
-    </mat-form-field>
-  
-  
-    <mat-form-field class="full-width">
-      <mat-label>Description</mat-label>
-      <textarea
-        #description
-        matInput
-        type="text"
-        placeholder="Describe the announcement"
-      ></textarea>
-    </mat-form-field>
-  
-  <div class="dialog-row">
-    <mat-form-field autocomplete="off">
-      <mat-label>ShowFrom</mat-label>
-      <input onclick="this.showPicker()" matInput type="datetime-local" />
-    </mat-form-field>
-
-    <mat-form-field autocomplete="off">
-      <mat-label>ShowTo</mat-label>
-      <input onclick="this.showPicker()" matInput type="datetime-local" />
-    </mat-form-field>
-  </div>
-
-  <div class="dialog-row">
-    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
-    <button class="action-btn" mat-raised-button type="submit">
-      <div *ngIf="!isLoading">Update</div>
-      <div *ngIf="isLoading" class="btn-spinner">
-        <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
-      </div>
-    </button>
-  </div>
-</div>
-</div>
 </form>
