--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
@@ -1,89 +1,80 @@
 .blacklist-widget-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: var(--border);
+  border-radius: 5px;
+  padding: 0.75em;
+  padding-top: 0.5em;
   width: 200px;
-  background-color: blue;
-  margin: 0;
-}
-// .blacklist-widget-container {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   border: var(--border);
-//   border-radius: 5px;
-//   padding: 0.75em;
-//   padding-top: 0.5em;
-//   width: 200px;
 
-//   .title {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//       mat-icon {
-//         height: 15px;
-//         width: 15px;
-//         padding-left: 5px;
-//         padding-top: 3px;
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+      mat-icon {
+        height: 15px;
+        width: 15px;
+        padding-left: 5px;
+        padding-top: 3px;
 
-//         &.material-icons {
-//           font-size: 15px;
-//         }
-//       }
+        &.material-icons {
+          font-size: 15px;
+        }
+      }
     
-//   }
+  }
 
-//   h2 {
-//     margin: 0;
-//     max-width: 70%;
-//   }
+  h2 {
+    margin: 0;
+    max-width: 70%;
+  }
 
-//   .text-container {
-//     width: 100%;
-//     overflow: hidden;
+  .text-container {
+    width: 100%;
+    overflow: hidden;
 
-//     .name-container {
-//       font-weight: 900;
-//       white-space: nowrap;
-//       text-overflow: ellipsis;
-//       width: 100%;
+    .name-container {
+      font-weight: 900;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      width: 100%;
 
-//       hr {
-//         border-top: 1px solid rgba(0, 0, 0, 0.2) !important;
-//         border: none;
-//         margin-top: 0;
-//       }
-//     }
+      hr {
+        border-top: 1px solid rgba(0, 0, 0, 0.2) !important;
+        border: none;
+        margin-top: 0;
+      }
+    }
 
-//     .comments-container {
-//       p {
-//         text-overflow: ellipsis;
-//         overflow: hidden;
-//         display: -webkit-box;
-//         -webkit-line-clamp: 4;
-//         -webkit-box-orient: vertical;
-//       }
-//     }
-//   }
+    .comments-container {
+      p {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+      }
+    }
+  }
 
-//   .action-bar-container {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: flex-end;
-//     column-gap: 10px;
-//     width: 100%;
-//   }
-// }
+  .action-bar-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    column-gap: 10px;
+    width: 100%;
+  }
+}
 
-// mat-icon {
-//   height: 20px;
-//   width: 20px;
-//   padding-left: 8px;
-//   padding-bottom: 3px;
+mat-icon {
+  height: 20px;
+  width: 20px;
+  padding-left: 8px;
+  padding-bottom: 3px;
 
-//   &.material-icons {
-//     font-size: 20px;
-//   }
-// }
+  &.material-icons {
+    font-size: 20px;
+  }
+}
