--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
@@ -11,18 +11,17 @@
         {{ blacklist.comments }}
       </p>
     </div>
+    <div class="expires-container">
+      <p>
+       Expiration: {{ blacklist.expiresAt ? (blacklist.expiresAt | date : 'dd/MM/YYYY') : '-' }}
+      </p>
+    </div>
   </div>
 
   <div class="action-bar-container">
+
     <button mat-raised-button class="secondary-btn" (click)="updateBlacklistDialog()">
       Edit <mat-icon>https</mat-icon>
-    </button>
-    <button
-      mat-raised-button
-      class="action-btn"
-      (click)="openSeeBlacklistDialog(blacklist.blacklistId)"
-    >
-      View <mat-icon aria-hidden="false">remove_red_eye</mat-icon>
     </button>
   </div>
 </div>
