--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
@@ -1,5 +1,6 @@
 .blacklist-widget-container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -7,23 +8,21 @@
   border-radius: 5px;
   padding: 0.75em;
   padding-top: 0.5em;
-  width: 200px;
 
   .title {
     display: flex;
     align-items: center;
     justify-content: space-between;
-      mat-icon {
-        height: 15px;
-        width: 15px;
-        padding-left: 5px;
-        padding-top: 3px;
+    mat-icon {
+      height: 15px;
+      width: 15px;
+      padding-left: 5px;
+      padding-top: 3px;
 
-        &.material-icons {
-          font-size: 15px;
-        }
+      &.material-icons {
+        font-size: 15px;
       }
-    
+    }
   }
 
   h2 {
@@ -46,6 +45,12 @@
         border: none;
         margin-top: 0;
       }
+    }
+
+    .expires-container {
+      position: absolute;
+      bottom: 5;
+      left: 5;
     }
 
     .comments-container {
