--- a/apps/frontend/src/app/pages/blacklist/blacklist.component.scss
+++ b/apps/frontend/src/app/pages/blacklist/blacklist.component.scss
@@ -1,11 +1,13 @@
-.blacklist-container{
+.blacklist-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
-  
-  .blacklist-widget-wrapper{
-    flex: 1;
+
+  .blacklist-widget-wrapper {
+    display: flex;
+    width: 30%;
+    padding: 10px;
   }
+  
 }
