--- a/apps/frontend/src/app/pages/blacklist/blacklist.component.scss
+++ b/apps/frontend/src/app/pages/blacklist/blacklist.component.scss
@@ -1,13 +1,13 @@
 .blacklist-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: row;
+  // display: flex;
+  // justify-content: center;
+  // flex-wrap: wrap;
+  // flex-direction: row;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 2em;
 
   .blacklist-widget-wrapper {
-    display: flex;
-    width: 30%;
-    padding: 10px;
   }
-  
 }
