--- a/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
@@ -1,3 +1,4 @@
+<frontend-file-upload></frontend-file-upload>
 <form (ngSubmit)="onSubmit()" [formGroup]="createBikeForm">
   <h1>Add Bike</h1>
   <hr />
