--- a/apps/frontend/src/app/components/file-upload/file-upload.component.html
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.html
@@ -1,13 +1,41 @@
-<ng-container *ngIf="!filesSelected">
+<ng-container *ngIf="selectedFiles.length === 0">
   <img src="assets/icons/file-upload.svg" alt="File upload icon" class="file-upload-icon" />
   <br />
   <h1 class="">Upload files</h1>
   <p class="file-upload-text">Must be {{ getAllowedFileFormatsAsText() }}</p>
 </ng-container>
 
-<div class="file-drop-area">
+<!-- File selection / upload -->
+<input
+  style="display: none"
+  #fileUpload
+  type="file"
+  multiple
+  (change)="uploadImages($event)"
+  accept="image/png, image/jpeg, video/mp4"
+/>
+<button
+  class="file-drop-area"
+  (click)="fileUpload.click()"
+  type="button"
+  accept="image/png, image/jpeg, video/mp4"
+>
+  <!-- TODO - implement select of files via drag&drop -->
   <span>Drag and drop your file(s) here or</span>
   <span class="link">browse here</span>
-</div>
+</button>
 
-<ng-container *ngIf="!filesSelected"> </ng-container>
+<!-- File list -->
+<ng-container *ngIf="selectedFiles.length > 0">
+  <section class="selected-files-list">
+    <div *ngFor="let file of selectedFiles">
+      <div class="selected-file">
+        <img src="assets/icons/file.svg" alt="File icon" class="file-icon" />
+        <span class="file-name">{{ formatFileName(file.name) }}</span>
+        <span class="file-size">{{ formatFileSize(file.size) }}</span>
+        <button class="remove-file" (click)="removeUploadedFile(file)">X</button>
+      </div>
+      <hr />
+    </div>
+  </section>
+</ng-container>
