--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -23,7 +23,7 @@
         class="basic-btn"
         [ngStyle]="{ opacity: showExpired ? 1 : 0.5 }"
       >
-        Experied
+        Expired
       </button>
       <button mat-raised-button class="action-btn" (click)="createAnnouncement()">
         Add Announcement
@@ -58,8 +58,8 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="images">
-        <th mat-header-cell *matHeaderCellDef>Images</th>
+      <ng-container matColumnDef="files">
+        <th mat-header-cell *matHeaderCellDef>Files</th>
         <td mat-cell *matCellDef="let element" class="small-field">
           <button mat-raised-button class="secondary-btn">
             View <mat-icon aria-hidden="false">remove_red_eye</mat-icon>
@@ -67,7 +67,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="status">
+      <!-- <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let element" class="small-field">
           <button
@@ -78,7 +78,7 @@
             {{ getStatus(element.showFrom, element.showTo) }}
           </button>
         </td>
-      </ng-container>
+      </ng-container> -->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="editAnnouncement()"></tr>
