--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
@@ -1,14 +1,25 @@
 .blacklist-widget-container {
-  // display: flex;
-  // flex-wrap: wrap;
-  // flex-direction: column;
   align-items: center;
   justify-content: center;
   border: var(--border);
   border-radius: 5px;
   padding: 0.75em;
   padding-top: 0.5em;
-  // min-width: 200px;
+
+  .image-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .image {
+    height: 100%;
+    width: 49%;
+    margin: 1%;
+  }
+
+  .hidden {
+    display: none;
+  }
 
   h2 {
     margin: 0;
