--- a/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
@@ -13,13 +13,20 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off">
+    <mat-form-field>
       <mat-label>Task</mat-label>
-      <mat-select formControlName="task">
+
+      <input matInput formControlName="task" [matAutocomplete]="auto" />
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let task of filteredTasks | async" [value]="task">
+          {{ task }}
+        </mat-option>
+      </mat-autocomplete>
+      <!-- <mat-select formControlName="task">
         <mat-option *ngFor="let task of bbAssignmentTask" [value]="task">
           {{ task }}
         </mat-option>
-      </mat-select>
+      </mat-select> -->
       <mat-error
         *ngIf="createAssignmentForm.get('task')?.invalid && createAssignmentForm.get('task')?.dirty"
       >
