--- a/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
@@ -16,7 +16,7 @@
     <mat-form-field>
       <mat-label>Task</mat-label>
 
-      <input matInput formControlName="task" [matAutocomplete]="auto" />
+      <input #task matInput formControlName="task" [matAutocomplete]="auto" />
       <mat-autocomplete #auto="matAutocomplete">
         <mat-option *ngFor="let task of filteredTasks | async" [value]="task">
           {{ task }}
