--- a/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
@@ -25,7 +25,7 @@
       <mat-error
         *ngIf="createAssignmentForm.get('task')?.invalid && createAssignmentForm.get('task')?.dirty"
       >
-        Has to one of the presented values
+        Has to be one of the presented values
       </mat-error>
     </mat-form-field>
   </div>
