--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -67,7 +67,7 @@
         </td>
       </ng-container>
 
-      <!-- <ng-container matColumnDef="status">
+      <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let element" class="small-field">
           <button
@@ -78,7 +78,7 @@
             {{ getStatus(element.showFrom, element.showTo) }}
           </button>
         </td>
-      </ng-container> -->
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="editAnnouncement()"></tr>
