--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -14,7 +14,7 @@
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
   --main-blue-lowest-opacity: rgba(47, 47, 162, 0.1);
   --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
-  --lime-green: #98FFA8;
+  --lime-green: #98ffa8;
   --green: #1dea3e;
   --grey: rgba(0, 0, 0, 0.2);
   --lightblue: #ebebf6;
