feat: 🎸 upgrade styling and add form

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -141,6 +141,7 @@
             >assignment_turned_in</mat-icon
           >
           <mat-icon aria-hidden="false" *ngSwitchCase="'Bike Sheet'">fact_check</mat-icon>
+          <mat-icon aria-hidden="false" *ngSwitchCase="'Announcements'">announcement</mat-icon>
           <mat-icon aria-hidden="false" *ngSwitchDefault>report</mat-icon>
         </div>
         <h1 class="title">{{ title }}</h1>
