--- a/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
@@ -4,23 +4,38 @@
 
   <mat-form-field class="full-width" autocomplete="off">
     <mat-label>Title</mat-label>
-    <input #title type="text" matInput class="setBackground" />
+    <input #title type="text" formControlName="title" matInput />
   </mat-form-field>
 
   <mat-form-field class="full-width">
     <mat-label>Description</mat-label>
-    <input #description type="text" matInput class="large setBackground topText" />
+    <input
+      #description
+      type="text"
+      formControlName="comments"
+      matInput
+    />
   </mat-form-field>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
-      <mat-label>ShowFrom</mat-label>
-      <input onclick="this.showPicker()" matInput type="datetime-local" class="setBackground" />
+      <mat-label>Show from</mat-label>
+      <input
+        onclick="this.showPicker()"
+        formControlName="showFrom"
+        matInput
+        type="datetime-local"
+      />
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
-      <mat-label>ShowTo</mat-label>
-      <input onclick="this.showPicker()" matInput type="datetime-local" class="setBackground" />
+      <mat-label>Show to</mat-label>
+      <input
+        onclick="this.showPicker()"
+        matInput
+        type="datetime-local"
+        formControlName="showTo"
+      />
     </mat-form-field>
   </div>
 
