Add file upload API call

--- a/apps/frontend/src/app/pages/checkin/update-checkin-dialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/update-checkin-dialog/update-checkin-dialog.component.html
@@ -1,6 +1,8 @@
 <frontend-file-upload
+  #fileUpload
+  [parentType]="'luggages'"
   [existingFiles]="files"
-  (filesChangedEvent)="updateSelectedFiles($event)"
+  (submissionFinishedEvent)="finalizeSubmission()"
 ></frontend-file-upload>
 <form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <h1>Update Check In</h1>
