--- a/apps/frontend/src/app/pages/checkin/update-checkin-dialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/update-checkin-dialog/update-checkin-dialog.component.html
@@ -2,7 +2,8 @@
   #fileUpload
   [parentType]="'luggages'"
   [existingFiles]="files"
-  (submissionFinishedEvent)="finalizeSubmission()"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
 ></frontend-file-upload>
 <form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <h1>Update Check In</h1>
