--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -38,6 +38,8 @@
   justify-content: left;
 
   width: 100%;
+  max-height: 400px;
+  overflow: scroll;
 
   margin-top: 10px;
 }
@@ -48,6 +50,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 2px;
+}
+
+.invalid-file {
+  color: red;
 }
 
 .file-icon {
@@ -86,4 +92,21 @@ hr {
   background-color: lightgray;
   height: 1px;
   border: none;
+}
+
+.invalid-files-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: start;
+  color: darkred;
+}
+
+.subtitle {
+  font-size: large;
+}
+
+.invalid-files-section > ul{
+  margin-top: 5px;
+  padding-left: 5px;
 }
