--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -86,3 +86,11 @@ h1 {
   padding: 10px;
   margin-right: 10px;
 }
+
+@media (max-width: 1027px)  {
+  ::ng-deep.mat-dialog-container {
+    width: 450px;
+    margin: auto;
+    max-height: 90vh;
+  }
+}
