--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -11,7 +11,7 @@
   width: 100px;
 }
 
-.file-drop-area {
+.file-select-area {
   display: flex;
   flex-direction: column;
   justify-content: center;
