feat: 🎸 add file uploader component

--- a/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
@@ -1,3 +1,10 @@
+<frontend-file-upload
+  #fileUpload
+  [parentType]="'announcements'"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
+></frontend-file-upload>
+
 <form [formGroup]="createAnnouncementForm" (submit)="onSubmit()">
   <h1>Add Announcement</h1>
   <hr />
