--- a/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
@@ -1,3 +1,10 @@
+<frontend-file-upload
+  #fileUpload
+  [parentType]="'announcements'"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
+></frontend-file-upload>
+
 <form [formGroup]="updateAnnouncementForm" (submit)="onSubmit()">
   <h1>Update Announcement</h1>
   <hr />
