feat: 🎸 update styling and add logic to update dialog

--- a/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
@@ -1,6 +1,7 @@
 <frontend-file-upload
   #fileUpload
   [parentType]="'announcements'"
+  [existingFiles]="files"
   (submissionFinishedEvent)="finalizeSubmission($event)"
   (containsInvalidFilesEvent)="updateFilesStatus($event)"
 ></frontend-file-upload>
