--- a/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
@@ -19,7 +19,7 @@
     <textarea
       #comments
       matInput
-      style="height: 100px" 
+      style="height: 100px"
       type="text"
       formControlName="comments"
       placeholder="Describe the announcement"
@@ -30,6 +30,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Show from</mat-label>
       <input
+        [min]="today"
         onclick="this.showPicker()"
         formControlName="showFrom"
         matInput
@@ -39,7 +40,13 @@
 
     <mat-form-field autocomplete="off">
       <mat-label>Show to</mat-label>
-      <input onclick="this.showPicker()" matInput type="datetime-local" formControlName="showTo" />
+      <input
+        onclick="this.showPicker()"
+        matInput
+        [min]="today"
+        type="datetime-local"
+        formControlName="showTo"
+      />
     </mat-form-field>
   </div>
 
