--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -94,7 +94,7 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: left;
-  align-items: start;
+  align-items: flex-start;
   color: darkred;
 }
 
