--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -36,56 +36,62 @@
     <table mat-table [dataSource]="displayAnnouncementList" *ngIf="!isLoading">
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td mat-cell *matCellDef="let element" class="comments-field">{{ element.title }}</td>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          class="comments-field"
+          (click)="openEditAnnouncement()"
+        >
+          {{ element.title }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element" class="comments-field">{{ element.comments }}</td>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          class="comments-field"
+          (click)="openEditAnnouncement()"
+        >
+          {{ element.comments }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="showFrom">
         <th mat-header-cell *matHeaderCellDef>Show <br />From</th>
-        <td mat-cell *matCellDef="let element" class="small-field">
+        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement()">
           {{ element.showFrom | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="showTo">
         <th mat-header-cell *matHeaderCellDef>Show <br />To</th>
-        <td mat-cell *matCellDef="let element" class="small-field">
+        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement()">
           {{ element.showTo | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="files">
-        <th mat-header-cell *matHeaderCellDef>Files</th>
+        <th mat-header-cell *matHeaderCellDef>Images</th>
         <td mat-cell *matCellDef="let element" class="small-field">
-          <button mat-raised-button class="secondary-btn">
-            View <mat-icon aria-hidden="false">remove_red_eye</mat-icon>
+          <button mat-raised-button class="secondary-btn link">
+            <img src="../../../../assets/icons/link-icon.svg" alt="link icon" class="link-icon" />
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element" class="small-field">
-          <button
-            mat-flat-button
-            class="status"
-            [ngClass]="getStatus(element.showFrom, element.showTo)"
-          >
+        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement()">
+          <div class="status" [ngClass]="getStatus(element.showFrom, element.showTo)">
             {{ getStatus(element.showFrom, element.showTo) }}
-          </button>
+          </div>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        (click)="openEditAnnouncement()"
-      ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
     <div class="table-spinner-full-size" *ngIf="isLoading">
