--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -60,14 +60,14 @@
 
       <ng-container matColumnDef="showFrom">
         <th mat-header-cell *matHeaderCellDef>Show <br />From</th>
-        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement()">
+        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement()">
           {{ element.showFrom | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="showTo">
         <th mat-header-cell *matHeaderCellDef>Show <br />To</th>
-        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement()">
+        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement()">
           {{ element.showTo | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
