--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -26,6 +26,11 @@ body {
   padding: 0;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
 * {
   font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
