--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -40,7 +40,7 @@
           mat-cell
           *matCellDef="let element"
           class="comments-field"
-          (click)="openEditAnnouncement()"
+          (click)="openEditAnnouncement(element)"
         >
           {{ element.title }}
         </td>
@@ -52,7 +52,7 @@
           mat-cell
           *matCellDef="let element"
           class="comments-field"
-          (click)="openEditAnnouncement()"
+          (click)="openEditAnnouncement(element)"
         >
           {{ element.comments }}
         </td>
@@ -60,14 +60,14 @@
 
       <ng-container matColumnDef="showFrom">
         <th mat-header-cell *matHeaderCellDef>Show <br />From</th>
-        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement()">
+        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement(element)">
           {{ element.showFrom | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="showTo">
         <th mat-header-cell *matHeaderCellDef>Show <br />To</th>
-        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement()">
+        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement(element)">
           {{ element.showTo | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
@@ -83,7 +83,7 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement()">
+        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement(element)">
           <div class="status" [ngClass]="getStatus(element.showFrom, element.showTo)">
             {{ getStatus(element.showFrom, element.showTo) }}
           </div>
