feat: 🎸 upgrade styling for file upload

--- a/apps/frontend/src/app/components/file-upload/file-upload.component.html
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.html
@@ -23,19 +23,19 @@
   <section class="selected-files-list">
     <div *ngFor="let file of existingFiles">
       <div class="selected-file">
-        <img src="assets/icons/file.svg" alt="File icon" class="file-icon" />
+        <img src="assets/icons/file.svg" alt="File icon"/>
         <span class="file-name">{{ formatFileName(file) }}</span>
         <span class="file-size"></span>
-        <button class="remove-file" (click)="removeExistingFile(file)">X</button>
+        <button (click)="removeExistingFile(file)">X</button>
       </div>
       <hr />
     </div>
     <div *ngFor="let file of selectedFiles">
       <div class="selected-file" [ngClass]="isFileValid(file) ? '' : 'invalid-file'">
-        <img src="assets/icons/file.svg" alt="File icon" class="file-icon" />
+        <img src="assets/icons/file.svg" alt="File icon"/>
         <span class="file-name">{{ formatFileName(file.name) }}</span>
         <span class="file-size">{{ formatFileSize(file.size) }}</span>
-        <button class="remove-file" (click)="removeUploadedFile(file)">X</button>
+        <button (click)="removeUploadedFile(file)">X</button>
       </div>
       <hr />
     </div>
