--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -31,46 +31,46 @@
   max-height: 400px;
   overflow: scroll;
   margin-top: 10px;
-}
 
-.selected-file {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2px;
-}
+  .selected-file {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px;
 
-.invalid-file {
-  color: red;
-}
+    &.invalid-file {
+      color: red;
+    }
 
-.file-icon {
-  height: 20px;
-  margin-right: 4px;
-}
+    img {
+      height: 20px;
+      margin-right: 4px;
+    }
+    
+    .file-name {
+      width: 70%;
+    }
+    
+    .file-size {
+      width: 20%;
+      color: lightgray;
+    }
 
-.file-name {
-  width: 75%;
-}
-
-.file-size {
-  width: 15%;
-  color: lightgray;
-}
-
-.remove-file {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 20px;
-  height: 20px;
-  background-color: var(--main-blue);
-  color: white;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
+    button {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 20px;
+      height: 20px;
+      background-color: var(--main-blue);
+      color: white;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+    }
+  }
 }
 
 hr {
@@ -83,12 +83,14 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: left;
-  align-items: start;
-  color: darkred;
-}
+  color: var(--danger-red);
+  width: 100%;
+  padding-left: 2em;
+  margin-top: 10px;
 
-.subtitle {
-  font-size: large;
+  .subtitle {
+    font-size: large;
+  }
 }
 
 .invalid-files-section > ul {
