Refactor asset links

--- a/apps/frontend/src/app/components/dashboard-widgets/dashboard-links/dashboard-links.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/dashboard-links/dashboard-links.component.html
@@ -9,17 +9,17 @@
       target="_blank"
       alt="Simplyture logo"
     >
-      <img src="../../../../assets/images/simplyture.png" />
+      <img src="assets/images/simplyture.png" />
     </a>
     <a href="https://taxa.nu/ywelcome20.asp" target="_blank" alt="Taxa logo">
-      <img src="../../../../assets/images/taxa.png" />
+      <img src="assets/images/taxa.png" />
     </a>
     <a
       href="https://mte5-oc.oracleindustry.com/OPERA9/opera/operacloud/faces/opera-cloud-index/OperaCloud"
       target="_blank"
       alt="Opera Link"
     >
-      <img src="../../../../assets/images/opera.png" />
+      <img src="assets/images/opera.png" />
     </a>
   </div>
 </section>
