--- a/apps/frontend/src/app/pages/login/login.component.html
+++ b/apps/frontend/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <section>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="login-form">
-    <img src="../../../../assets/full-omni-logo-white-background@svg.svg" />
+    <img src="assets/full-omni-logo-white-background@svg.svg" />
 
     <mat-form-field autocomplete="off" class="full-width">
       <mat-label>Email</mat-label>
