--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -76,14 +76,19 @@
         <th mat-header-cell *matHeaderCellDef>Images</th>
         <td mat-cell *matCellDef="let element" class="small-field">
           <button mat-raised-button class="secondary-btn link">
-            <img src="../../../../assets/icons/link-icon.svg" alt="link icon" class="link-icon" />
+            <img src="assets/icons/link-icon.svg" alt="link icon" class="link-icon" />
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element" class="small-field" (click)="openEditAnnouncement(element)">
+        <td
+          mat-cell
+          *matCellDef="let element"
+          class="small-field"
+          (click)="openEditAnnouncement(element)"
+        >
           <div class="status" [ngClass]="getStatus(element.showFrom, element.showTo)">
             {{ getStatus(element.showFrom, element.showTo) }}
           </div>
